feat -> authentication services and middleware implementation for protected routes
